linked pc as client and 3ds as server

--- a/PC/LETMEDRAWINPC/CMakeLists.txt
+++ b/PC/LETMEDRAWINPC/CMakeLists.txt
@@ -5,7 +5,10 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(LETMEDRAWINPC
         main.c
-test.c test.h)
+        test.c
+        test.h
+        Debug.h
+        Debug.c)
 target_link_libraries(LETMEDRAWINPC ws2_32)
 #[[
 include_directories(F:/devkitPro/devkitARM/include)
