Back and forth between PC/3DS done
3DS as server turn to client after the connexion of the PC
When the PC as client connect to the 3DS

--- a/3DS/LETMEDRAWINPC/CMakeLists.txt
+++ b/3DS/LETMEDRAWINPC/CMakeLists.txt
@@ -3,8 +3,12 @@ project(LETMEDRAWINPC C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(LETMEDRAWINPC 
-        Source/main.c)
+add_executable(LETMEDRAWINPC
+        Include/Controls.h
+        Source/main.c
+        Source/Controls.c
+        )
+include_directories(Include)
 include_directories(F:/devkitPro/devkitARM/include)
 include_directories(F:/devkitPro/libctru/include)
 include_directories(F:/devkitPro/devkitARM/arm-none-eabi/include)
