--- a/3DS/LETMEDRAWINPC/Makefile
+++ b/3DS/LETMEDRAWINPC/Makefile
@@ -35,11 +35,10 @@ TARGET		:=	$(notdir $(CURDIR))
 BUILD		:=	build
 SOURCES		:=	source
 DATA		:=	data
-INCLUDES	:=	include
-GRAPHICS	:=	gfx
-GFXBUILD	:=	$(BUILD)
-#ROMFS		:=	romfs
-#GFXBUILD	:=	$(ROMFS)/gfx
+INCLUDES	:=	include Include
+
+APP_TITLE		:=	LETMEDRAWINPC
+APP_AUTHOR		:=	SuperPomme2Ter
 
 #---------------------------------------------------------------------------------
 # options for code generation
@@ -130,8 +129,8 @@ export HFILES	:=	$(PICAFILES:.v.pica=_shbin.h) $(SHLISTFILES:.shlist=_shbin.h) \
 			$(GFXFILES:.t3s=.h)
 
 export INCLUDE	:=	$(foreach dir,$(INCLUDES),-I$(CURDIR)/$(dir)) \
-			$(foreach dir,$(LIBDIRS),-I$(dir)/include) \
-			-I$(CURDIR)/$(BUILD)
+                    			$(foreach dir,$(LIBDIRS),-I$(dir)/include) \
+                    			-I$(CURDIR)/$(BUILD)
 
 export LIBPATHS	:=	$(foreach dir,$(LIBDIRS),-L$(dir)/lib)
 
