BY THE HOLY VECTREX FINALLY A LITTLE BIT OF CLEANUP
and added a way to always exit the app on the 3ds, not fun to shutdown you're DS because it's blocked by one line.
Removed useless files, and created better comments as well as remove many of them

--- a/3DS/LETMEDRAWINPC/Makefile
+++ b/3DS/LETMEDRAWINPC/Makefile
@@ -41,6 +41,7 @@ GFXBUILD	:=	$(BUILD)
 #ROMFS		:=	romfs
 #GFXBUILD	:=	$(ROMFS)/gfx
 
+APP_DESCRIPTION :=  LET ME USE MY 3DS ON PAINT AAAAAAAAAAAAH
 APP_TITLE		:=	LETMEDRAWINPC
 APP_AUTHOR		:=	SuperPomme2Ter
 
