Migration to new PC, added JSON for config

--- a/3DS/LETMEDRAWINPC/CMakeLists.txt
+++ b/3DS/LETMEDRAWINPC/CMakeLists.txt
@@ -7,6 +7,6 @@ add_executable(LETMEDRAWINPC
         Source/main.c
         )
 include_directories(Include)
-include_directories(F:/devkitPro/devkitARM/include)
-include_directories(F:/devkitPro/libctru/include)
-include_directories(F:/devkitPro/devkitARM/arm-none-eabi/include)
+include_directories(C:/devkitPro/devkitARM/include)
+include_directories(C:/devkitPro/libctru/include)
+include_directories(C:/devkitPro/devkitARM/arm-none-eabi/include)
