--- a/PC/LETMEDRAWINPC/CMakeLists.txt
+++ b/PC/LETMEDRAWINPC/CMakeLists.txt
@@ -12,7 +12,9 @@ add_executable(LETMEDRAWINPC
         Server.c
         Server.h
         Controls.c
-        Controls.h)
+        Controls.h
+        cJSON.c
+        cJSON.h)
 target_link_libraries(LETMEDRAWINPC ws2_32)
 #[[
 include_directories(F:/devkitPro/devkitARM/include)
