trying to fix bug, the 3DS connect to the PC but the PC as server never accept a connexion (?)

--- a/3DS/LETMEDRAWINPC/CMakeLists.txt
+++ b/3DS/LETMEDRAWINPC/CMakeLists.txt
@@ -5,7 +5,10 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(LETMEDRAWINPC
         Source/main.c
-        )
+        Source/FlagStructData.c
+        Include/FlagStructData.h
+
+)
 include_directories(Include)
 include_directories(C:/devkitPro/devkitARM/include)
 include_directories(C:/devkitPro/libctru/include)
