--- a/3DS/LETMEDRAWINPC/Makefile
+++ b/3DS/LETMEDRAWINPC/Makefile
@@ -38,9 +38,11 @@ DATA		:=	data
 INCLUDES	:=	include
 GRAPHICS	:=	gfx
 GFXBUILD	:=	$(BUILD)
+
 #ROMFS		:=	romfs
 #GFXBUILD	:=	$(ROMFS)/gfx
 
+ICON	:=	LETMEDRAWINPCico.png
 APP_DESCRIPTION :=  LET ME USE MY 3DS ON PAINT AAAAAAAAAAAAH
 APP_TITLE		:=	LETMEDRAWINPC
 APP_AUTHOR		:=	SuperPomme2Ter
