--- a/PC/LETMEDRAWINPC/CMakeLists.txt
+++ b/PC/LETMEDRAWINPC/CMakeLists.txt
@@ -13,6 +13,8 @@ add_executable(LETMEDRAWINPC
         Controls.h
         Server.c
         Server.h
+        InputInfo.c
+        InputInfo.h
 
 )
 target_link_libraries(LETMEDRAWINPC ws2_32)
